// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Link ENCOURA theme matches the snapshot 1`] = `
<div>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1d4br3u-MuiTypography-root-MuiLink-root"
    href="https://www.act.org"
    target="_blank"
  >
    <div>
      children
    </div>
  </a>
</div>
`;

exports[`Link ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-15w25fd-MuiTypography-root-MuiLink-root"
    href="https://www.act.org"
    target="_blank"
  >
    <div>
      children
    </div>
  </a>
</div>
`;

exports[`Link ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1aas0bq-MuiTypography-root-MuiLink-root"
    href="https://www.act.org"
    target="_blank"
  >
    <div>
      children
    </div>
  </a>
</div>
`;

exports[`Link ENCOURAGE_E4E theme matches the snapshot 1`] = `
<div>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-11f1f8m-MuiTypography-root-MuiLink-root"
    href="https://www.act.org"
    target="_blank"
  >
    <div>
      children
    </div>
  </a>
</div>
`;
